--- a/js/data/test2.html
+++ b/js/data/test2.html
@@ -118,7 +118,7 @@
             // (et quand on reclique re-affiche tout)
             
             // retirer script#tweets
-            // aller chercher le json en "AJAX" sur 'https://rawgithub.com/DavidBruant/contenu-formations-web/master/js/data/tweets.json'
+            // aller chercher le json en "AJAX" sur 'https://rawgit.com/DavidBruant/contenu-formations-web/master/js/data/tweets.json'
         })
       </script>
     
