--- a/html+css/boilerplate.html
+++ b/html+css/boilerplate.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta description="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         
         <style>
             /*
@@ -20,7 +19,7 @@
             }
         </style>
 
-        <link rel="stylesheet" href="url">
+        <link rel="stylesheet" href="bla/mystylesheet.css">
         
         <title>formation </title>
     </head>
@@ -38,25 +37,6 @@ Comment
 
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
