--- a/js/exos/base.html
+++ b/js/exos/base.html
@@ -120,7 +120,8 @@
                 // ajouter un bouton qui quand on clique dessus affiche 'click' dans la console.
                 // -- qui quand on clique ne garde que les commits des 5 derniers jours
                 // (et quand on reclique re-affiche tout)
-            });
+            })
+            .catch(function(err){ console.error(err); });
             
         })
       </script>
