--- a/js/DOM/script loading.html
+++ b/js/DOM/script loading.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <!--
+        
         <script>
             // inline
-            console.log(document.body)
+            console.log('body ?', document.body)
         </script>
         <script src="lol.js"> </script>
-        -->
+        
         <script defer src="lol.js"> </script>
         <script defer src="lol2.js"> </script>
         <script defer src="lol3.js"> </script>
