--- a/exam_gui/index.html
+++ b/exam_gui/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta description="">
         <title>Exam David</title>
-        <script src="main.js"></script>
+        <script src="bundle.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
