--- a/exo-js/projet.html
+++ b/exo-js/projet.html
@@ -9,29 +9,7 @@
         </style>
 
         <title>Projet JS</title>
-        <script defer src="moment.js"></script>
-        <script type="text/javascript">
-        	"use strict";
-        	
-        	document.addEventListener('DOMContentLoaded', function(){
-
-				// charger et afficher les tweets de 
-	            var commits = fetch('https://api.github.com/Financial-Times/polyfill-service/commits?access_token=')
-	            .then(function(result){ return result.json() });
-        	
-	            Promise.all(commits)
-	            .then(function(result){
-
-	            	console.log(result);
-
-	            });
-	        });
-
-
-//GET /repos/:JakeChampion/:polyfill-service/commits
-
-//https://github.com/Financial-Times/polyfill-service/commits/master
-        </script>
+        <script defer src="browserify-bundle.js"></script>
   </head>
 
   <body>
