Il y a un truc à l'écran, c'est beau

--- a/donut/index.html
+++ b/donut/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<title>exercice donut</title>
+
+	<style type="text/css">
+		* {
+		    transform-origin: 0px 0px 0px;
+		}
+	</style>
 </head>
 <body>
 	<script defer src="browserify.js"></script>
