--- a/js/data/test2.html
+++ b/js/data/test2.html
@@ -106,6 +106,7 @@
 
                 // pour le premier tweet
                     // l'afficher
+                console.log(tweets[0]);
                     // afficher son message dans la console
                     // créer une div qui contient le texte du commit et ajouter la div au <body>
 
