--- a/js/data/test2.html
+++ b/js/data/test2.html
@@ -141,7 +141,7 @@
                 
                 // mettre le <ol> dans le <body>
                 
-
+                // (pause)
                 // isoler une fonction, qui pour un objet tweet créé un <li> (séparer la phase de création des éléments et de composition)
 
                 // Créer et ajouter un <button> qui quand on clique dessus affiche 'click' dans la console.
