--- a/js/data/test2.html
+++ b/js/data/test2.html
@@ -160,7 +160,7 @@
             // * createClickTimeButton.js
             // * main.js
 
-            // charger tout ça via des script defer src="...">
+            // charger tout ça via des <script defer src="...">
             })
         })
       </script>
@@ -185,13 +185,6 @@
   </head>
 
   <body>
-  
-  <script id="data-tweets" type="application/json">
-    // json
-  </script>  
-  <script id="data-autre" type="inconnu">
-    // données textuelle arbitraires
-  </script>
   </body>
 
 </html>
