--- a/html+css/boilerplate.html
+++ b/html+css/boilerplate.html
@@ -4,18 +4,16 @@
         <meta charset="utf-8">
         <meta description="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="referrer" value="same-origin">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
         <style>
             /*
-            https://github.com/DavidBruant/Better-CSS-defaults/blob/master/better-defaults.css
+            https://github.com/DavidBruant/better-defaults/blob/master/defaults.css
             */
 
             *, *:before, *:after {
                 box-sizing: border-box;
-            }
-            
-            h1{
-                color: green;
             }
         </style>
 
