--- a/js/exos/tweets.html
+++ b/js/exos/tweets.html
@@ -160,7 +160,7 @@
                 // * createClickTimeButton.js
                 // * main.js
 
-                // charger tout ça via des <script defer src="..."> dans le head
+                // charger tout ça via des <script defer src="..."></script> dans le <head>
             })
             .catch(function(e){console.error(e)});
             
